--- a/styles.css
+++ b/styles.css
@@ -18,11 +18,13 @@ header {
     padding: 4px;
     border-radius: 5px; /* Bordas arredondadas */
     text-align: center; /* Centraliza o conteúdo do cabeçalho */
+    box-shadow: 0 8px 12px rgba(0, 0, 0, 0.3); /* Eixo X, Eixo Y, Desfoque, Cor */
     
 }
 
 .logo-img {
     max-width: 150px; /* Limita o tamanho da logo */
+    
 }
 
 p {
@@ -88,12 +90,14 @@ main {
     flex-direction: column; /* Coloca a imagem e o texto em coluna */
     align-items: center; /* Centraliza horizontalmente */
     cursor: pointer; /* Muda o cursor para indicar que é clicável */
+    
 }
 
 /* Estilo das imagens das opções */
 .option-img {
     width: 100px; /* Tamanho da imagem */
     height: auto; /* Mantém a proporção */
+    
 }
 
 /* Estilo do rodapé */
@@ -110,6 +114,7 @@ footer {
     margin-bottom: 1px;
     margin: 0;
     padding: 0;
+    box-shadow: 0 8px 12px rgba(0, 0, 0, 0.3); /* Eixo X, Eixo Y, Desfoque, Cor */
 }
 
 
@@ -118,6 +123,7 @@ footer {
     max-width: 300px; /* Ajuste conforme necessário */
     border-radius: 10px;
     margin-bottom: 10px; /* Reduzir a margem inferior para aproximar do GIF */
+    
 }
 
 .centralizado {
@@ -127,6 +133,7 @@ footer {
     max-width: 250px; /* Garante que a imagem não ultrapasse a largura do contêiner */
     height: auto; /* Mantém a proporção da imagem */
     margin-bottom: 90px;
+    
     
 }
 
@@ -140,6 +147,7 @@ footer {
     font-weight: bold;
     cursor: pointer; /* Muda o cursor para indicar que é clicável */
     transition: background-color 0.3s; /* Efeito de transição */
+    box-shadow: 0 8px 12px rgba(0, 0, 0, 0.3); /* Eixo X, Eixo Y, Desfoque, Cor */
     
 }
 
@@ -154,6 +162,7 @@ footer {
     cursor: pointer; /* Muda o cursor para indicar que é clicável */
     transition: background-color 0.3s; /* Efeito de transição */
     margin-top: 15px;
+    box-shadow: 0 8px 12px rgba(0, 0, 0, 0.3); /* Eixo X, Eixo Y, Desfoque, Cor */
     
 }
 
@@ -251,6 +260,7 @@ footer {
     background-color:  rgba(255, 174, 0, 0.918); /* Cor de fundo */
     color: white;
     cursor: pointer;
+    box-shadow: 0 8px 12px rgba(0, 0, 0, 0.3); /* Eixo X, Eixo Y, Desfoque, Cor */
 }
 
 
@@ -285,3 +295,16 @@ label {
     color: #ffc800;    /* Cor amarela */
 }
 
+.resultado-style {
+    background-color: #2c3e50; /* Cor de fundo */
+    color: white; /* Cor do texto */
+    border: none; /* Remove a borda padrão */
+    border-radius: 10px; /* Arredondar os cantos */
+    padding: 5px 10px; /* Espaçamento interno */
+    font-size: 14px; /* Tamanho da fonte */
+    font-weight: bold;
+    cursor: pointer; /* Muda o cursor para indicar que é clicável */
+    transition: background-color 0.3s; /* Efeito de transição */
+    margin-top: 15px;
+    box-shadow: 0 8px 12px rgba(0, 0, 0, 0.3); /* Eixo X, Eixo Y, Desfoque, Cor */
+}
